Picks up new integration SDK, splits everything into differnt ifaces.
A first attempt at making accounting more robust given the new API. Still a lot of work to do.

--- a/config/application.conf
+++ b/config/application.conf
@@ -1,3 +1,13 @@
+hold: {
+  bic: IRONUSCA000
+  number_format: 1000%3s
+}
+
+settlement: {
+  bic: IRONUSCA000
+  number_format: 2000%3s
+}
+
 accounts: [
   {
     name: John Doe
