--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ project.mainClassName = project.group + '.Application'
 
 ext {
     ver = [
-        tokenIntegrationSdk: '1.0.86-SNAPSHOT',
+        tokenIntegrationSdk: '1.1.1',
     ]
 }
 
