Adds basic FX flow. Need to review and test.

--- a/config/application.conf
+++ b/config/application.conf
@@ -1,30 +1,37 @@
-hold: {
-  bic: IRONUSCA000
-  number_format: 1000%3s
-}
-
-settlement: {
-  bic: IRONUSCA000
-  number_format: 2000%3s
-}
-
-accounts: [
-  {
-    name: John Doe
+accounts: {
+  hold: {
     bic: IRONUSCA000
-    number: 0000001
-    currency: USD
-    balance: 1000000
+    number_format: 1000%3s
   }
 
-  {
-    name: Sam Smith
+  fx: {
     bic: IRONUSCA000
-    number: 0000002
-    currency: EUR
-    balance: 1000000
+    number_format: 2000%3s
   }
-]
+
+  settlement: {
+    bic: IRONUSCA000
+    number_format: 3000%3s
+  }
+
+  customers: [
+    {
+      name: John Doe
+      bic: IRONUSCA000
+      number: 0000001
+      currency: USD
+      balance: 1000000
+    }
+
+    {
+      name: Sam Smith
+      bic: IRONUSCA000
+      number: 0000002
+      currency: EUR
+      balance: 1000000
+    }
+  ]
+}
 
 pricing {
   transaction_fee: 0.10
