Adds lookup customer and balance methods.

--- a/config/application.conf
+++ b/config/application.conf
@@ -17,6 +17,14 @@ accounts: {
   customers: [
     {
       name: John Doe
+      address: {
+        house: 703
+        street: Market
+        city: San Francisco
+        post_code: 94103
+        state: CA
+        country: US
+      }
       bic: IRONUSCA000
       number: 0000001
       currency: USD
@@ -25,6 +33,13 @@ accounts: {
 
     {
       name: Sam Smith
+      address: {
+        house: Level 39
+        street: One Canada Square
+        city: London
+        post_code: 'E14 5AB'
+        country: United Kingdom
+      }
       bic: IRONUSCA000
       number: 0000002
       currency: EUR
