Introduces Payment concept.
This is needed because our API expects a 'transaction' to exist after begin* has
been initiated. Needs cleanup. Will follow up, but merging what works locally.

--- a/config/application.conf
+++ b/config/application.conf
@@ -1,17 +1,23 @@
 accounts: {
   hold: {
-    bic: IRONUSCA000
+    bic: RUBYUSCA000
     number_format: 1000%3s
   }
 
   fx: {
-    bic: IRONUSCA000
+    bic: RUBYUSCA000
     number_format: 2000%3s
   }
 
   settlement: {
-    bic: IRONUSCA000
+    bic: RUBYUSCA000
     number_format: 3000%3s
+  }
+
+  reject: {
+    bic: RUBYUSCA000
+    number_format: 4000%3s
+    balance: 1000000
   }
 
   customers: [
@@ -25,7 +31,7 @@ accounts: {
         state: CA
         country: US
       }
-      bic: IRONUSCA000
+      bic: RUBYUSCA000
       number: 0000001
       currency: USD
       balance: 1000000
@@ -40,7 +46,7 @@ accounts: {
         post_code: 'E14 5AB'
         country: United Kingdom
       }
-      bic: IRONUSCA000
+      bic: RUBYUSCA000
       number: 0000002
       currency: EUR
       balance: 1000000
