Extends .gitignore to include *.iml files.

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,8 @@ gradle-app.setting
 # Cache of project
 .gradletasknamecache
 
+# Idea generated file.
+*.iml
+
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
