Change the way we setup FX, hold, settlement and reject accounts.
Lists accounts explicitly in the config now.

--- a/config/application.conf
+++ b/config/application.conf
@@ -1,25 +1,98 @@
 accounts: {
-  // TODO(alexey): List accounts explicitly.
-  hold: {
-    bic: RUBYUSCA000
-    number_format: 1000%3s
-  }
+  hold: [
+    {
+      name: 'Hold account - USD'
+      bic: RUBYUSCA000
+      number: 1000USD
+      currency: USD
+    }
 
-  fx: {
-    bic: RUBYUSCA000
-    number_format: 2000%3s
-  }
+    {
+      name: 'Hold account - EUR'
+      bic: RUBYUSCA000
+      number: 1000EUR
+      currency: EUR
+    }
 
-  settlement: {
-    bic: RUBYUSCA000
-    number_format: 3000%3s
-  }
+    {
+      name: 'Hold account - JPY'
+      bic: RUBYUSCA000
+      number: 1000JPY
+      currency: JPY
+    }
+  ]
 
-  reject: {
-    bic: RUBYUSCA000
-    number_format: 4000%3s
-    balance: 1000000
-  }
+  fx: [
+    {
+      name: 'FX account - USD'
+      bic: RUBYUSCA000
+      number: 2000USD
+      currency: USD
+    }
+
+    {
+      name: 'FX account - EUR'
+      bic: RUBYUSCA000
+      number: 2000EUR
+      currency: EUR
+    }
+
+    {
+      name: 'FX account - JPY'
+      bic: RUBYUSCA000
+      number: 2000JPY
+      currency: JPY
+    }
+  ]
+
+  settlement: [
+    {
+      name: 'Settlement account - USD'
+      bic: RUBYUSCA000
+      number: 3000USD
+      currency: USD
+    }
+
+    {
+      name: 'Settlement account - EUR'
+      bic: RUBYUSCA000
+      number: 3000EUR
+      currency: EUR
+    }
+
+    {
+      name: 'Settlement account - JPY'
+      bic: RUBYUSCA000
+      number: 3000JPY
+      currency: JPY
+    }
+  ]
+
+  reject: [
+    {
+      name: 'Reject account - USD'
+      bic: RUBYUSCA000
+      number: 4000USD
+      currency: USD
+      balance: 1000000
+    }
+
+    {
+      name: 'Reject account - EUR'
+      bic: RUBYUSCA000
+      number: 4000EUR
+      currency: EUR
+      balance: 1000000
+    }
+
+    {
+      name: 'Reject account - JPY'
+      bic: RUBYUSCA000
+      number: 4000JPY
+      currency: JPY
+      balance: 1000000
+    }
+  ]
 
   customers: [
     {
