config comments: where to find syntax, "reject" accts

--- a/config/application.conf
+++ b/config/application.conf
@@ -1,3 +1,5 @@
+// Parsed by ConfigParser.java
+// syntax: https://github.com/typesafehub/config#using-hocon-the-json-superset
 accounts: {
   hold: [
     {
@@ -68,6 +70,9 @@ accounts: {
     }
   ]
 
+  // Reject accounts: To test some instant payment
+  // rollback flows, it's useful to have accounts
+  // that reject transfers.
   reject: [
     {
       name: 'Reject account - USD'
