completed implementation, not tested

--- a/config/application.conf
+++ b/config/application.conf
@@ -149,6 +149,23 @@ pricing {
   }
 }
 
+access-tokens: [
+  {
+    access-token: "R0RUAX0C1T"
+    member-id: "tokenMember1"
+    accounts: [
+      "0000001"
+    ]
+  },
+  {
+    access-token: "iHzXBm1U4z"
+    member-id: "tokenMember2"
+    accounts: [
+      "0000002"
+    ]
+  },
+]
+
 // TODO(Luke) make sure these are correct and test them.
 secret-key-store: [
   {
