Use newest Bank Integration SDK

--- a/config/application.conf
+++ b/config/application.conf
@@ -179,6 +179,7 @@ account-linking {
       private-key: "jXU4ZZUnqnNmDAwtm_0tpse80erzQfADBZIpgXczI70"
       // Token will use this public key to verify the signature on the bank authorization payload
       public-key: "GGo29vo73dE296fO8-PT3ywf-clI3KBjS0_3DoKvYm4"
+      is-active: true
     }
   ]
 
