--- a/config/application.conf
+++ b/config/application.conf
@@ -86,6 +86,9 @@ accounts: {
   ]
 }
 
+// We suppose that two token members ("tokenMember1" and "tokenMember2")
+// have authorized linking their respective accounts with Token. Specifically,
+// the InitiateLinking and LinkingCallback
 access-tokens: [
   {
     access-token: "R0RUAX0C1T"
