re-add services with stubs add getBalance test

--- a/config/application.conf
+++ b/config/application.conf
@@ -87,8 +87,7 @@ accounts: {
 }
 
 // We suppose that two token members ("tokenMember1" and "tokenMember2")
-// have authorized linking their respective accounts with Token. Specifically,
-// the InitiateLinking and LinkingCallback
+// have authorized linking their respective accounts with Token.
 access-tokens: [
   {
     access-token: "R0RUAX0C1T"
